# mzcomponents

./: Cargo.toml  mzoon_commit  readme.md
backend/: Cargo.toml
backend/src/: main.rs
components/: Cargo.toml
components/src/: form_subcomponents.rs  lib.rs  util.rs  view_subcomponents.rs
components/src/input/: MultiLineInput.rs  mod.rs
components/src/selection/: selector.rs
frontend/: Cargo.toml
frontend/src/: app.rs  header.rs  lib.rs  router.rs
frontend/src/pages/: mod.rs  selector_page.rs
shared/: Cargo.toml
shared/src/: lib.rs
