[package]
version = "0.1.0"
name = "backend"
authors = [" "]
description = "mz components"
license = "MIT"
readme = "../readme.md"
edition = "2021"


[dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "2f31839d5a2cd4fb687f9daf23923a903acb4fe6" }
shared = { path = "../shared", features = ["backend"] }
futures-signals = "0.3.24"
once_cell = "1.9.0"
log = { version = "0.4.14", features = ["std", "serde"] }
humantime = "2.1.0"
chrono = "0.4.19"
actix-rt = "2.6.0"