[package]
version = "0.1.0"
name = "frontend"
authors = [" "]
description = "mz components"
license = "MIT"
readme = "../readme.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "2f31839d5a2cd4fb687f9daf23923a903acb4fe6" }
shared = { path = "../shared", features = ["frontend"] }
components = {path = "../components"}
humantime = "2.1.0"
strum = "0.24"
strum_macros = "0.24"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']